--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -16,11 +16,13 @@
     <a href="/" class="btn btn-info">Voltar</a>
     </div>
     <div class="col-8 m-auto pt-4 pb-2 text-center">
-        {% csrf_token %}
-        <div class="form-group mt-3"> Modelo: {{form.modelo}}</div>
-        <div class="form-group mt-3"> Marca: {{form.marca}}</div>
-        <div class="form-group mt-3 mb-3"> Ano: {{form.ano}}</div>
+        <form name="form" id="form" action="/create/" method="post">
+            {% csrf_token %}
+            <div class="form-group mt-3"> Modelo: {{form.modelo}}</div>
+            <div class="form-group mt-3"> Marca: {{form.marca}}</div>
+            <div class="form-group mt-3 mb-3"> Ano: {{form.ano}}</div>
         <input type="submit" class="btn btn-success" value="Salvar">
+        </form>
     </div>
 
 </body>
