--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,39 +2,49 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-<title>CRUD</title>
+    <title>CRUD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="col-8 m-auto pt-2 pb-2 text-center">
+<div class="col-8 m-auto pt-2 pb-2 text-center">
     <h1>Crud com Python</h1>
-    </div>
+</div>
 
-    <div class="col-8 m-auto pt-3 pb-2 text-center">
+<div class="col-8 m-auto pt-3 pb-2 text-center">
     <a href="/form" class="btn btn-success">Adicionar</a>
-    </div>
-    <div class="col-8 m-auto pt-4 pb-2 text-center">
-        <table class="table">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Modelo</th>
-      <th scope="col">Marca</th>
-      <th scope="col">Ano</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-        </table>
-    </div>
+</div>
+<div class="col-8 m-auto pt-4 pb-2 text-center">
+    <table class="table">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Modelo</th>
+            <th scope="col">Marca</th>
+            <th scope="col">Ano</th>
+            <th scope="col">Ações</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for dbs in db %}
+        <tr>
+        <th>{{dbs.id}}</th>
+        <td>{{dbs.modelo}}</td>
+        <td>{{dbs.marca}}</td>
+        <td>{{dbs.ano}}</td>
+        <td>
+            <a href="view/{{dbs.id}}/" class="btn btn-dark">Visualizar</a>
+            <a href="" class="btn btn-primary">Editar</a>
+            <a href="" class="btn btn-danger">Deletar</a>
+        </td>
+         </tr>
+        {% endfor %}
+        </tbody>
+        <tbody>
+        </tbody>
+    </table>
+</div>
 
 </body>
 </html>
